--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,12 +31,15 @@ dependencies:
   flutter:
     sdk: flutter
   sqflite: ^2.3.0  # En son sürümü kontrol edin
-  path_provider: ^2.1.1 # En son sürümü kontrol edin
+  path_provider: ^2.1.5 # En son sürümü kontrol edin
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   sqflite_common_ffi: ^2.4.0+1
+  csv: ^6.0.0
+  file_picker: ^10.3.8
+  excel: ^4.0.6
 
 dev_dependencies:
   flutter_test:
