--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,8 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  sqflite: ^2.3.0  # En son sÃ¼rÃ¼mÃ¼ kontrol edin
-  path_provider: ^2.1.5 # En son sÃ¼rÃ¼mÃ¼ kontrol edin
+  sqflite: ^2.3.0  # En son surumu kontrol edin
+  path_provider: ^2.1.5 # En son surumu kontrol edin
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
